# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: actions.yml
gendiff/scripts/: gendiff.py
